--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
       <tr>
-        <td>Web Devepment</td>
+        <td>Web Development</td>
         <td>⭐️⭐️⭐️⭐️⭐️</td>
       </tr>
     </table>
